--- a/src/components/InputBox/InputBox.css
+++ b/src/components/InputBox/InputBox.css
@@ -1,6 +1,8 @@
+
 input {
     margin: auto;
     width: 36%;
+    margin-top: 16px;
     font-size: 52px;
     height: 1em;
     font-family: "Catamaran";
@@ -22,4 +24,10 @@ button {
     border: 2px solid #56CBF9;
     color: #56CBF9;
     display: block;
+}
+
+@media (max-width: 650px) {
+    input, button {
+        width: 75%;
+    }
 }
